@@ -28,6 +28,132 @@ def save(name, string):
     f.write(string)
     f.close()
 
+
+
+if 0:
+    v = cssutils.css.CSSVariablesDeclaration()
+    v.cssText = 'top 0'
+    print v
+    print v.cssText
+    
+    sys.exit(0)
+    
+
+
+if 1:
+    css = u'''
+    @variables {
+      c1: #0f0;
+      /*1*/
+      c2: red;
+      /* TODO @x; */
+      a : var(x)
+    }
+    '''
+    s = cssutils.parseString(css)
+    varrule = s.cssRules[0]
+    print varrule
+    for v in varrule.variables:
+        print v, varrule.variables[v]
+    print 20*'-'
+
+    v = cssutils.css.CSSVariablesDeclaration(cssText='''
+    a: 1px;
+    /* 1 */
+    c: #f00;
+    a: 2px 2px
+    ''')
+    print v.cssText
+    sys.exit(1)
+    
+    v.setVariable('a', '1')
+    print v.getVariableValue('a')
+
+    print 'a' in v
+
+    v['b'] = 2
+    print v['b']
+
+    print v
+    print 'keys', v.keys()
+    
+    for k in v:
+        print k, v[k]
+    for i in range(0, v.length):
+        print i, v.item(i), v.getVariableValue(v.item(i))
+        
+    v.removeVariable('a')
+    del v['b']
+    print v
+    print 'keys', v.keys()
+    
+    sys.exit(0)
+
+if 1:
+    css = u'''
+    @variables {
+      c1: #0f0;
+      c2: scroll;
+    }
+    div.logoContainer {
+      color: var(c1);
+      color: var(c3);
+      background: var(c1) no-repeat var(c2) var(c3);
+      }
+    '''
+    s = cssutils.parseString(css)
+    varrule, stylerule = s.cssRules
+
+    print s.cssText
+    print 
+#    p = stylerule.style.getProperty('color')
+#    print p
+#    print '3', id(p.cssValue), type(p.cssValue), p.cssValue
+    print '\n--- RESOLVE var() and remove @variables ---'
+    
+    # replace vars (ALL!)
+    for p in stylerule.style.getProperties(all=True):
+        v = p.cssValue
+        #print 1, v.cssValueTypeString, v
+        
+        if v.cssValueType == v.CSS_VALUE_LIST:
+            newvalue = []
+            for vi in v:
+                if vi.cssValueType == vi.CSS_VARIABLE:
+                    if vi.value:
+                        print '+ CSSValueList: Replacing %r with %r' % (p.value,
+                                                                        vi.value)
+                        newvalue.append(vi.value)
+                    else:
+                        print '- CSSValueList: No value found for %r' % vi.cssText
+                        newvalue.append(vi.cssText)
+                else:
+                    newvalue.append(vi.cssText)
+                    
+            p.value = ' '.join(newvalue)
+                
+        elif v.cssValueType == v.CSS_VARIABLE:
+            if v.value:
+                print '+ Replacing %r with %r' % (p.value, v.value)                
+                p.value = v.value
+            else:
+                print '- No value found for %r' % p.value
+
+                
+    # remove @variables rules
+    for r in s:
+        if r.VARIABLES_RULE == r.type:
+            s.deleteRule(r)
+    
+    #cssutils.ser.prefs.validOnly = True
+    print
+    print s.cssText
+    
+    sys.exit(1)
+
+
+
+
 if 0:
     cssutils.cssproductions.PRODUCTIONS.insert(1,('EXPRESSION',
         r'\(?\s*function\s*\(({ident},?\s*)*\)\s*\{(\s|\S)*\}\s*\)?\((({ident}|\.),?\s*)*\)'))
@@ -45,16 +171,6 @@ x:expression((function(ele){ele.style.behavior=''})(this));
     #p = cssutils.css.CSSPrimitiveValue(u'expression((function(ele){ele.style.behavior="none";})(this))')
     
     sys.exit(1)
-
-if 1:
-    #prince-link: target-counter(a, page);
-    s = """
-        a {
-            filter:  DropShadow(color=#eee, offX=2, offY=1)
-        }
-    """
-    print cssutils.parseString(s).cssText
-    sys.exit(0)
 
 
 if 1:
@@ -164,130 +280,7 @@ if 1:
     sys.exit(0)
 
 
-if 1:
-    v = cssutils.css.CSSVariablesDeclaration()
-    v.cssText = 'top 0'
-    print v
-    print v.cssText
-    
-    sys.exit(0)
-    
 
-
-if 1:
-    css = u'''
-    @variables {
-      c1: #0f0;
-      /*1*/
-      c2: #f00;
-      /* TODO @x; */
-      a : var(x)
-    }
-    '''
-    s = cssutils.parseString(css)
-    varrule = s.cssRules[0]
-    print varrule
-    print varrule.cssText
-
-    #b: #fff;
-    v = cssutils.css.CSSVariablesDeclaration(cssText='''
-    a: 1px;
-    /* 1 */
-    c: #f00;
-    a: 2px 2px
-    ''')
-    print v.cssText
-    sys.exit(1)
-    
-    v.setVariable('a', '1')
-    print v.getVariableValue('a')
-
-    print 'a' in v
-
-    v['b'] = 2
-    print v['b']
-
-    print v
-    print 'keys', v.keys()
-    
-    for k in v:
-        print k, v[k]
-    for i in range(0, v.length):
-        print i, v.item(i), v.getVariableValue(v.item(i))
-        
-    v.removeVariable('a')
-    del v['b']
-    print v
-    print 'keys', v.keys()
-    
-    sys.exit(0)
-
-if 1:
-    css = u'''
-    @variables {
-      c1: #0f0;
-      c2: #f00;
-    }
-    div.logoContainer {
-      color: var(c1);
-      color: var(c3);
-      /*background: var(c1) no-repeat var(c2);*/
-      }
-    '''
-    #css = '@variables {} a { color: var(a);}'
-    
-    s = cssutils.parseString(css)
-    varrule, stylerule = s.cssRules
-
-    print s.cssText
-    print 
-#    p = stylerule.style.getProperty('color')
-#    print p
-#    print '3', id(p.cssValue), type(p.cssValue), p.cssValue
-    print 'c1 =', varrule.variables['c1']
-    print '\n--- RESOLVE var() and remove @variables ---'
-    
-    # replace vars (ALL!)
-    for p in stylerule.style.getProperties(all=True):
-        v = p.cssValue
-        #print 1, type(v), v
-            
-        if v.cssValueType == v.CSS_VALUE_LIST:
-            newvalue = []
-            for x in v:
-                #print 222, x
-                if x.cssValueType == x.CSS_VARIABLE:
-                    actual = x.value  
-                    if actual:
-                        print '+ CSSValueList: Replacing %r with %r' % (p.value,
-                                                                        actual)
-                        newvalue.append(actualvalue)
-                    else:
-                        print '- CSSValueList: No value found for %r' % x.cssText
-                        newvalue.append(x.cssText)
-                else:
-                    newvalue.append(x.cssText)
-                    
-            p.value = ' '.join(newvalue)
-                
-        elif v.cssValueType == v.CSS_VARIABLE:
-                #print 111, v
-                actual = v.value  
-                if actual:
-                    print '+ Replacing %r with %r' % (p.value, actual)
-                    p.value = v.value
-                else:
-                    print '- No value found for %r' % p.value
-                
-    # remove @variables
-    for r in s:
-        if r.VARIABLES_RULE == r.type:
-            s.deleteRule(r)
-    
-    print
-    print s.cssText
-    
-    sys.exit(1)
 
 if 0:
     do = """
